Data Flow Fixed,Card spacing fixed, alignment fixed

--- a/src/Pages/HomePage/homePage.css
+++ b/src/Pages/HomePage/homePage.css
@@ -15,8 +15,6 @@
 }
 
 .card {
-  display: flex;
-  max-width: max-content;
-  justify-content: space-between;
-  overflow-x: auto;
+  gap: 2%;
+  padding-left: 5%;
 }
