--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,9 +1,7 @@
 .e-card {
     border: 1px solid rgb(196, 196, 218) ; 
     width: fit-content;
-    height: fit-content;
     padding: 20px;
-    margin-left: 20%;
     background-color: rgb(246, 242, 242);
 }
 
@@ -25,13 +23,3 @@
     
 }
 
-.mainContainer {
-    width: 100%;
-    min-height: 100vh;
-    /* background: rgba(242, 242, 242, 255); */
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    align-items: center;
-    padding-top: 0 1rem;
-}
