--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -12,6 +12,7 @@
 
 .logo {
     padding: 2rem;
+    margin-left: 3%;
 }
 
 .nav-links {
